refactor(cli): 拆分 actions 到单独目录中管理

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,6 +31,10 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@plasticine-islands/core": "workspace:*",
     "cac": "^6.7.14"
+  },
+  "devDependencies": {
+    "@plasticine-islands/types": "workspace:*"
   }
 }
