--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "start:cli": "pnpm -C packages/cli start",
     "build:cli": "pnpm -C packages/cli build",
+    "build:core": "pnpm -C packages/core build",
     "stub:cli": "pnpm -C packages/cli stub",
+    "stub:core": "pnpm -C packages/core stub",
     "test": "vitest",
     "test:u": "vitest -u",
+    "play:dev": "pnpm -C playground dev",
+    "play:build": "pnpm -C playground build",
     "commit": "cz",
     "up": "taze -wI",
     "prepare": "husky install"
@@ -35,8 +39,5 @@
     "typescript": "^4.9.5",
     "unbuild": "^1.1.2",
     "vitest": "^0.28.5"
-  },
-  "dependencies": {
-    "@plasticine-islands/cli": "workspace:^0.0.0"
   }
 }
