--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [["@plasticine-islands/cli"]],
+  "fixed": [["@plasticine-islands/cli", "@plasticine-islands/core", "@plasticine-islands/types"]],
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
