feat(vite-plugin-dev-server-html): 添加为 vite 开发环境服务器注入入口 html 的 vite 插件

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "start:cli": "pnpm -C packages/cli start",
-    "build": "pnpm build:cli & pnpm build:core",
+    "build": "pnpm build:cli & pnpm build:core & pnpm build:vite-plugin-dev-server-html",
     "build:cli": "pnpm -C packages/cli build",
     "build:core": "pnpm -C packages/core build",
-    "stub": "pnpm stub:cli & pnpm stub:core",
+    "build:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html build",
+    "stub": "pnpm stub:cli & pnpm stub:core & pnpm stub:vite-plugin-dev-server-html",
     "stub:cli": "pnpm -C packages/cli stub",
     "stub:core": "pnpm -C packages/core stub",
+    "stub:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html stub",
     "test": "vitest",
     "test:u": "vitest -u",
     "play:dev": "pnpm -C playground dev",
