--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,7 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@plasticine-islands/vite-plugin-dev-server-html": "workspace:*",
     "@plasticine-islands/types": "workspace:*",
     "vite": "^4.1.4"
   }
