chore(cli): update package.json

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,9 +32,7 @@
   },
   "dependencies": {
     "@plasticine-islands/core": "workspace:*",
+    "@plasticine-islands/types": "workspace:*",
     "cac": "^6.7.14"
-  },
-  "devDependencies": {
-    "@plasticine-islands/types": "workspace:*"
   }
 }
