--- a/playground/package.json
+++ b/playground/package.json
@@ -10,6 +10,8 @@
     "build": "plasticine-islands build docs"
   },
   "dependencies": {
-    "@plasticine-islands/cli": "workspace:*"
+    "@plasticine-islands/cli": "workspace:*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
