--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,13 +29,19 @@
   "dependencies": {
     "@plasticine-islands/types": "workspace:*",
     "@plasticine-islands/vite-plugin-dev-server-html": "workspace:*",
+    "@vitejs/plugin-react": "^3.1.0",
+    "ejs": "^3.1.8",
+    "fs-extra": "^11.1.0",
+    "ora": "^6.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.1.4"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.2",
+    "@types/fs-extra": "^11.0.1",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "rollup": "^3.19.1"
   }
 }
