feat(cli): 添加 build 命令的 -o, --outdir 参数, 用于配置产物输出保存目录

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,7 +26,7 @@
     "cli"
   ],
   "scripts": {
-    "start": "tsx src/index.ts",
+    "start": "node dist/index.mjs",
     "build": "unbuild",
     "stub": "unbuild --stub"
   },
