--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,14 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [["@plasticine-islands/cli", "@plasticine-islands/core", "@plasticine-islands/types"]],
+  "fixed": [
+    [
+      "@plasticine-islands/cli",
+      "@plasticine-islands/core",
+      "@plasticine-islands/types",
+      "@plasticine-islands/vite-plugin-dev-server-html"
+    ]
+  ],
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
