--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,7 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
+    "@plasticine-islands/shared": "workspace:*",
     "@plasticine-islands/types": "workspace:*",
     "@plasticine-islands/vite-plugin-dev-server-html": "workspace:*",
     "@vitejs/plugin-react": "^3.1.0",
