chore: 添加 shared 打包 scripts

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "pnpm run --filter !@plasticine-islands/playground --parallel build",
     "build:cli": "pnpm -C packages/cli build",
     "build:core": "pnpm -C packages/core build",
+    "build:shared": "pnpm -C packages/shared build",
     "build:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html build",
     "stub": "pnpm run --parallel stub",
     "stub:cli": "pnpm -C packages/cli stub",
     "stub:core": "pnpm -C packages/core stub",
+    "stub:shared": "pnpm -C packages/shared stub",
     "stub:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html stub",
     "test": "vitest",
     "test:u": "vitest -u",
