feat: 优化 build 命令, 修复偶现的 build 出错问题

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "scripts": {
     "start:cli": "pnpm -C packages/cli start",
-    "build": "pnpm run --filter !@plasticine-islands/playground --parallel build",
+    "prebuild": "tsx ./scripts/prebuild.ts",
+    "build": "rimraf -g packages/{*/,}dist && pnpm run --filter !@plasticine-islands/playground --parallel build",
     "build:cli": "pnpm -C packages/cli build",
+    "build:cli-service": "pnpm -C packages/cli-service build",
     "build:core": "pnpm -C packages/core build",
     "build:shared": "pnpm -C packages/shared build",
     "build:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html build",
     "stub": "pnpm run --parallel stub",
     "stub:cli": "pnpm -C packages/cli stub",
+    "stub:cli-service": "pnpm -C packages/cli-service stub",
     "stub:core": "pnpm -C packages/core stub",
     "stub:shared": "pnpm -C packages/shared stub",
     "stub:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html stub",
@@ -37,9 +40,12 @@
     "commitizen": "^4.3.0",
     "cz-git": "^1.5.0",
     "eslint": "^8.34.0",
+    "execa": "^7.1.1",
+    "glob": "^9.3.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
+    "rimraf": "^4.4.1",
     "taze": "^0.8.5",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5",
