--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
   "type": "module",
   "scripts": {
     "start:cli": "pnpm -C packages/cli start",
-    "prebuild": "tsx ./scripts/prebuild.ts",
     "build": "rimraf -g packages/{*/,}dist && pnpm run --filter !@plasticine-islands/playground --parallel build",
     "build:cli": "pnpm -C packages/cli build",
     "build:cli-service": "pnpm -C packages/cli-service build",
     "build:core": "pnpm -C packages/core build",
     "build:shared": "pnpm -C packages/shared build",
     "build:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html build",
+    "build:vite-plugin-plasticine-islands-site-config": "pnpm -C packages/vite-plugin-plasticine-islands-site-config build",
     "stub": "pnpm run --parallel stub",
     "stub:cli": "pnpm -C packages/cli stub",
     "stub:cli-service": "pnpm -C packages/cli-service stub",
     "stub:core": "pnpm -C packages/core stub",
     "stub:shared": "pnpm -C packages/shared stub",
     "stub:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html stub",
+    "stub:vite-plugin-plasticine-islands-site-config": "pnpm -C packages/vite-plugin-plasticine-islands-site-config stub",
     "test": "vitest",
     "test:u": "vitest -u",
     "play:dev": "pnpm -C playground dev",
     "play:build": "pnpm -C playground build",
+    "play:preview": "pnpm -C playground preview",
     "commit": "cz",
     "up": "taze -wI",
     "prepare": "husky install"
