--- a/packages/vite-plugin-plasticine-islands-site-config/package.json
+++ b/packages/vite-plugin-plasticine-islands-site-config/package.json
@@ -25,7 +25,8 @@
     "stub": "unbuild --stub"
   },
   "dependencies": {
-    "@plasticine-islands/types": "workspace:*"
+    "@plasticine-islands/types": "workspace:*",
+    "chalk": "^5.2.0"
   },
   "peerDependencies": {
     "vite": "^4.1.4"
