chore(vite-plugin-plasticine-islands-site-config): format

--- a/packages/vite-plugin-plasticine-islands-site-config/package.json
+++ b/packages/vite-plugin-plasticine-islands-site-config/package.json
@@ -16,9 +16,7 @@
     }
   },
   "keywords": [
-    "vite plugin",
-    "dev server plugin",
-    "load html"
+    "vite plugin"
   ],
   "scripts": {
     "build": "unbuild",
