feat(playground): 测试约定式路由效果

--- a/playground/package.json
+++ b/playground/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@plasticine-islands/cli": "workspace:*",
     "@plasticine-islands/cli-service": "workspace:*",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "serve": "^14.2.0"
   }
 }
