feat(vite-plugin-plasticine-islands-site-config): 开发环境的 root 设置为虚拟的 root 路径, 防止将 tsx 等文件作为静态资源加载

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:cli-service": "pnpm -C packages/cli-service build",
     "build:core": "pnpm -C packages/core build",
     "build:shared": "pnpm -C packages/shared build",
+    "build:types": "pnpm -C packages/types build",
     "build:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html build",
     "build:vite-plugin-plasticine-islands-site-config": "pnpm -C packages/vite-plugin-plasticine-islands-site-config build",
     "stub": "pnpm run --parallel stub",
@@ -17,6 +18,7 @@
     "stub:cli-service": "pnpm -C packages/cli-service stub",
     "stub:core": "pnpm -C packages/core stub",
     "stub:shared": "pnpm -C packages/shared stub",
+    "stub:types": "pnpm -C packages/types stub",
     "stub:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html stub",
     "stub:vite-plugin-plasticine-islands-site-config": "pnpm -C packages/vite-plugin-plasticine-islands-site-config stub",
     "stub:vite-plugin-conventional-based-routing": "pnpm -C packages/vite-plugin-conventional-based-routing stub",
