--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,14 +5,14 @@
   "description": "types of @plasticine-islands",
   "type": "module",
   "license": "MIT",
-  "main": "./src/index.ts",
-  "module": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./src/index.ts",
-      "import": "./src/index.ts",
-      "types": "./src/index.ts"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "keywords": [
@@ -21,5 +21,9 @@
     "ssg",
     "plasticine-islands",
     "types"
-  ]
+  ],
+  "scripts": {
+    "build": "unbuild",
+    "stub": "unbuild --stub"
+  }
 }
