--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,13 +5,16 @@
   "description": "shared code of @plasticine-islands",
   "type": "module",
   "license": "MIT",
+  "files": [
+    "./dist"
+  ],
   "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -23,7 +26,7 @@
     "shared"
   ],
   "scripts": {
-    "build": "unbuild",
-    "stub": "unbuild --stub"
+    "dev": "tsup --watch",
+    "build": "tsup --dts"
   }
 }
