--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@plasticine-islands/*": ["./packages/*/src"]
     }
   },
-  "include": ["packages/**/*.ts"],
+  "include": ["packages/**/*.ts", "tsup.config.ts"],
   "exclude": ["node_modules"]
 }
