--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start:cli": "pnpm -C packages/cli start",
+    "dev": "pnpm run --filter !@plasticine-islands/playground --parallel dev",
+    "dev:cli": "pnpm -C packages/cli dev",
+    "dev:cli-service": "pnpm -C packages/cli-service dev",
+    "dev:core": "pnpm -C packages/core dev",
+    "dev:shared": "pnpm -C packages/shared dev",
+    "dev:types": "pnpm -C packages/types dev",
+    "dev:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html dev",
+    "dev:vite-plugin-plasticine-islands-site-config": "pnpm -C packages/vite-plugin-plasticine-islands-site-config dev",
+    "dev:vite-plugin-conventional-based-routing": "pnpm -C packages/vite-plugin-conventional-based-routing dev",
     "build": "rimraf -g packages/{*/,}dist && pnpm run --filter !@plasticine-islands/playground --parallel build",
     "build:cli": "pnpm -C packages/cli build",
     "build:cli-service": "pnpm -C packages/cli-service build",
@@ -13,15 +21,7 @@
     "build:types": "pnpm -C packages/types build",
     "build:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html build",
     "build:vite-plugin-plasticine-islands-site-config": "pnpm -C packages/vite-plugin-plasticine-islands-site-config build",
-    "stub": "pnpm run --parallel stub",
-    "stub:cli": "pnpm -C packages/cli stub",
-    "stub:cli-service": "pnpm -C packages/cli-service stub",
-    "stub:core": "pnpm -C packages/core stub",
-    "stub:shared": "pnpm -C packages/shared stub",
-    "stub:types": "pnpm -C packages/types stub",
-    "stub:vite-plugin-dev-server-html": "pnpm -C packages/vite-plugin-dev-server-html stub",
-    "stub:vite-plugin-plasticine-islands-site-config": "pnpm -C packages/vite-plugin-plasticine-islands-site-config stub",
-    "stub:vite-plugin-conventional-based-routing": "pnpm -C packages/vite-plugin-conventional-based-routing stub",
+    "start:cli": "pnpm -C packages/cli start",
     "test": "vitest",
     "test:u": "vitest -u",
     "play:dev": "pnpm -C playground dev",
@@ -42,6 +42,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@plasticine-yang/eslint-config-typescript": "^0.1.6",
     "@types/node": "^18.14.1",
+    "chokidar": "^3.5.3",
     "commitizen": "^4.3.0",
     "cz-git": "^1.5.0",
     "eslint": "^8.34.0",
@@ -49,12 +50,13 @@
     "glob": "^9.3.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "mkdist": "^1.2.0",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.1",
     "taze": "^0.8.5",
+    "tsup": "^6.7.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5",
-    "unbuild": "^1.1.2",
     "vitest": "^0.28.5"
   }
 }
