--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,12 +8,15 @@
   "bin": {
     "plasticine-islands": "./bin/plasticine-islands.js"
   },
+  "files": [
+    "./dist"
+  ],
   "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.js"
     }
   },
   "keywords": [
@@ -24,9 +27,9 @@
     "cli"
   ],
   "scripts": {
-    "start": "node dist/index.mjs",
-    "build": "unbuild",
-    "stub": "unbuild --stub"
+    "dev": "tsup --watch",
+    "build": "tsup",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@plasticine-islands/cli-service": "workspace:*",
