--- a/packages/vite-plugin-plasticine-islands-site-config/package.json
+++ b/packages/vite-plugin-plasticine-islands-site-config/package.json
@@ -5,13 +5,16 @@
   "description": "An internal vite plugin to supply virtual module of site configuration for @plasticine-islands packages.",
   "type": "module",
   "license": "MIT",
+  "files": [
+    "./dist"
+  ],
   "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -19,8 +22,8 @@
     "vite plugin"
   ],
   "scripts": {
-    "build": "unbuild",
-    "stub": "unbuild --stub"
+    "dev": "tsup --watch",
+    "build": "tsup --dts"
   },
   "dependencies": {
     "@plasticine-islands/types": "workspace:*",
