--- a/packages/cli-service/package.json
+++ b/packages/cli-service/package.json
@@ -26,8 +26,8 @@
     "cli-service"
   ],
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup --dts"
+    "dev": "cross-env NODE_ENV=development tsup --watch",
+    "build": "cross-env NODE_ENV=production tsup --dts"
   },
   "dependencies": {
     "unconfig": "^0.3.7",
